[gd_scene load_steps=7 format=2]

[ext_resource path="res://Font/19148.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Script/PauseMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 35
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 35
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 35
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Pause Title" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -269.0
margin_right = 512.0
margin_bottom = 300.0
custom_fonts/font = SubResource( 1 )
text = "Пауза"
align = 1

[node name="Play" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -86.5
margin_top = -67.0
margin_right = 86.5
margin_bottom = -23.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.313726, 0.313726, 0.313726, 1 )
custom_fonts/font = SubResource( 2 )
text = "Продолжить"
flat = true

[node name="Autors" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.5
margin_top = -22.0
margin_right = 55.5
margin_bottom = 22.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.313726, 0.313726, 0.313726, 1 )
custom_fonts/font = SubResource( 4 )
text = "авторы"
flat = true

[node name="Quit" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.5
margin_top = 27.0
margin_right = 55.5
margin_bottom = 71.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.313726, 0.313726, 0.313726, 1 )
custom_fonts/font = SubResource( 3 )
text = "выйти"
flat = true

[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Autors" to="." method="_on_Autors_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
